# GoldSprintsFatracing

./: CMakeLists.txt  main.cpp
BlackBox/: BlackBox.cpp  BlackBox.h
Common/: AsyncQueue.h  BaseSettings.h  BaseSettingsList.h  BaseThread.cpp  BaseThread.h  CommonStructures.h  CommunicationCommon.cpp  CommunicationCommon.h  Convert.h  Logger.cpp  Logger.h  SignalCallback.h  Singleton.h  TickThread.h  TransportDefines.h  Utils.cpp  Utils.h
Common/CameraAPI/: CameraDefines.h  ICameraAPI.h
Core/: Defines.h  Race.cpp  Race.h  Settings.cpp  Settings.h
Savers/: Defines.h  DiskManager.cpp  DiskManager.h  FileSaver.cpp  FileSaver.h  FolderManager.cpp  FolderManager.h  SessionSaver.cpp  SessionSaver.h
UI/: GoldSprintsFatracing.cpp  GoldSprintsFatracing.h  RaceWindow.cpp  RaceWindow.h  SettingsWindow.cpp  SettingsWindow.h  goldsprintsfatracing.ui  racewindow.ui  settingswindow.ui
XML/: GoldSprintsSettings.xml
